新增跳转页面以及修改和新增student时的合法性检查

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -41,9 +41,27 @@
 .none-btn{
     display: none;
 }
+
 .form-check-input {
     margin-left: 10px !important; 
 }
+
 .form-check-label {
     margin-left: 10px !important; 
+}
+
+#jump-page-input{
+    display: inline;
+    float: right;
+    width: 3rem;
+}
+
+#jump-page-btn{
+    float: right;
+    margin: 0 2.5px;
+    margin-top: -2px;
+}
+.float-right{
+    float: right;
+    margin: 0 3px;
 }
